--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "2.8.0",
+    "@emotion/jest": "^11.11.0",
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "framer-motion": "10",
