--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,20 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:storybook/recommended"]
+  "root": true,
+  "extends": ["next/core-web-vitals"],
+  "plugins": ["testing-library", "jest"],
+  "overrides": [
+    {
+      "files": [
+        "**/__tests__/**/*.[jt]s?(x)",
+        "**/?(*.)+(spec|test).[jt]s?(x)"
+      ],
+      "extends": ["plugin:testing-library/react"]
+    }
+  ],
+  "env": {
+    "jest": true
+  },
+  "rules": {
+    "jest/no-focused-tests": "error"
+  }
 }
