--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "emotion"
   ],
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
     "test": "jest",
     "build": "next build",
     "start": "next start",
@@ -27,6 +27,8 @@
     "@emotion/jest": "^11.11.0",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@testing-library/user-event": "^14.5.1",
+    "babel-jest": "^29.7.0",
     "framer-motion": "10",
     "next": "13.4.11",
     "react": "18.2.0",
@@ -34,7 +36,7 @@
     "storybook": "7.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.22.9",
+    "@babel/core": "^7.23.2",
     "@chakra-ui/storybook-addon": "5.0.1",
     "@fontsource/dm-sans": "^5.0.13",
     "@fontsource/im-fell-double-pica-sc": "^5.0.8",
@@ -48,20 +50,24 @@
     "@storybook/nextjs": "7.1.0",
     "@storybook/react": "7.1.0",
     "@storybook/testing-library": "0.1.0",
-    "@testing-library/jest-dom": "5.17.0",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "babel-loader": "9.1.3",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.11",
+    "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-storybook": "0.6.13",
-    "jest": "29.6.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "29.6.1",
     "jest-fetch-mock": "3.0.3",
     "plop": "^4.0.0",
     "prettier": "3.0.0",
+    "ts-jest": "^29.1.1",
     "typescript": "5.1.6"
   }
 }
