--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "@testing-library/user-event": "^14.5.1",
+    "@types/react-input-mask": "^3.0.3",
+    "axios": "^1.5.1",
     "babel-jest": "^29.7.0",
+    "formik": "^2.4.5",
     "framer-motion": "10",
     "next": "13.4.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "storybook": "7.1.0"
+    "react-input-mask": "^2.0.4",
+    "storybook": "7.1.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
