--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-dom": "18.2.0",
     "react-input-mask": "^2.0.4",
     "storybook": "7.1.0",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
