--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "jest-fetch-mock": "3.0.3",
     "plop": "^4.0.0",
     "prettier": "3.0.0",
+    "storybook-css-modules-preset": "^1.1.1",
     "ts-jest": "^29.1.1",
     "typescript": "5.1.6"
   }
